--- a/NAMESPACE
+++ b/NAMESPACE
@@ -10,6 +10,7 @@ export(TCGAStagePlot)
 export(TCGASurvivalPlot)
 export(TCGAUniCox)
 export(TCGA_group)
+export(bioForest)
 export(clustree_plot)
 export(cpdb_visualization)
 export(creat_project)
@@ -35,6 +36,7 @@ export(scVisTissueOR)
 import(CoGAPS)
 import(DoubletFinder)
 import(IOBR)
+import(Matrix)
 import(SCopeLoomR)
 import(Seurat)
 import(arrow)
@@ -61,5 +63,12 @@ import(survival)
 import(survminer)
 import(tidyr)
 import(tidyverse)
+importFrom(graphics,arrows)
+importFrom(graphics,axis)
+importFrom(graphics,box)
+importFrom(graphics,plot)
+importFrom(graphics,points)
+importFrom(graphics,text)
 importFrom(harmony,RunHarmony)
 importFrom(magrittr,"%>%")
+importFrom(utils,read.table)
