--- a/NAMESPACE
+++ b/NAMESPACE
@@ -56,6 +56,7 @@ import(mistyR)
 import(parallel)
 import(patchwork)
 import(pheatmap)
+import(plyr)
 import(qs)
 import(scMetabolism)
 import(stringr)
