--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -2,16 +2,16 @@ Package: easySingleCell
 Title: This is an R package to fast the bioinformatics analysis for single cell
 Version: 0.0.0
 Authors@R: 
-    person("Peng Xia", "Last", , "first.last@example.com", role = c("aut", "cre"),
+    person("Peng", "Xia", , "xp294053@163.com", role = c("aut", "cre"),
            comment = c(ORCID = "YOUR-ORCID-ID"))
-Description: Easy deal with the TCGA data based on one gene!
-License: MIT
+Description: Fast your bioinformatics analysis for scRNA-seq and TCGA data based on easySingleCell!
+License: MIT + file LICENSE
 Encoding: UTF-8
 Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.3.1
 LazyData: true
-Depends:
-    R (>= 3.6.0)
+Depends: 
+    R (>= 2.10)
 Imports:
     tidyverse,
     UCSCXenaTools,
@@ -22,4 +22,9 @@ Imports:
     GSVA,
     org.Hs.eg.db,
     enrichplot,
-    Seurat
+    scRNAtoolVis,
+    ClusterGVis,
+    qs,
+    ComplexHeatmap,
+    SummarizedExperiment
+biocViews: clusterProfiler,org.Hs.eg.db,SummarizedExperiment
