--- a/NAMESPACE
+++ b/NAMESPACE
@@ -16,22 +16,22 @@ export(TCGAUniCox)
 export(TCGA_group)
 export(VarDecompose)
 export(bioForest)
-export(clustree_plot)
 export(cpdb_visualization)
 export(creat_project)
-export(generateBranchEnrichmentPlot)
 export(get_TCGA)
-export(plotScRNATrajectories)
+export(plotMonocleBranchEnrich)
+export(plotMonocleTrajectories)
 export(runCellChatAnalysis)
 export(runCogapsAnalysis)
 export(runCytoTRACEAnalysis)
 export(runHdWGCNAStep1)
 export(runHdWGCNAStep2)
 export(runMistyRAnalysis)
-export(runMonocle2Analysis)
+export(runMonocleAnalysis)
 export(runScGSEA)
 export(runScMetabolismAnalysis)
 export(runScRNAQC)
+export(run_clustree)
 export(run_normalize)
 export(scVisDimPlot)
 export(scVisFeaturePlot)
