--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -2,7 +2,7 @@ Package: easySingleCell
 Title: This is an R package to fast the bioinformatics analysis for single cell
 Version: 0.0.1
 Authors@R: 
-    person("Peng", "Xia", "xp294053@163.com", role = c("aut", "cre"),
+    person("Peng", "Xia", , "xp294053@163.com", role = c("aut", "cre"),
            comment = c(ORCID = "YOUR-ORCID-ID"))
 Description: Fast your bioinformatics analysis for scRNA-seq and TCGA data based on easySingleCell!
 License: MIT + file LICENSE
