--- a/NAMESPACE
+++ b/NAMESPACE
@@ -37,6 +37,8 @@ export(scVisDimPlot)
 export(scVisFeaturePlot)
 export(scVisTissueOR)
 import(AUCell)
+import(CellChat)
+import(ClusterGVis)
 import(CoGAPS)
 import(DoubletFinder)
 import(IOBR)
@@ -58,6 +60,7 @@ import(hdWGCNA)
 import(ktplots)
 import(limma)
 import(mistyR)
+import(org.Hs.eg.db)
 import(parallel)
 import(patchwork)
 import(pheatmap)
