--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,6 +4,7 @@ S3method(ComputeModuleScore,Seurat)
 S3method(ComputeModuleScore,default)
 export(ComputeModuleScore)
 export(MarkDoubletsWrapper)
+export(PlotViolin)
 export(PrepareCell2loc)
 export(PrepareCpdb)
 export(PreparePyscenic)
@@ -43,6 +44,7 @@ import(CoGAPS)
 import(DoubletFinder)
 import(IOBR)
 import(Matrix)
+import(RColorBrewer)
 import(SCopeLoomR)
 import(Seurat)
 import(arrow)
@@ -55,7 +57,10 @@ import(fgsea)
 import(furrr)
 import(future)
 import(ggplot2)
+import(ggprism)
 import(ggpubr)
+import(ggsignif)
+import(grid)
 import(hdWGCNA)
 import(ktplots)
 import(limma)
@@ -68,11 +73,13 @@ import(plyr)
 import(qs)
 import(readr)
 import(scMetabolism)
+import(scales)
 import(stringr)
 import(survival)
 import(survminer)
 import(tidyr)
 import(tidyverse)
+import(vioplot)
 importFrom(graphics,arrows)
 importFrom(graphics,axis)
 importFrom(graphics,box)
