--- a/NAMESPACE
+++ b/NAMESPACE
@@ -7,8 +7,12 @@ export(MarkDoubletsWrapper)
 export(PlotViolin)
 export(PrepareCell2loc)
 export(PrepareCpdb)
+export(PrepareDataForInferCNV)
 export(PreparePyscenic)
 export(ProcessPyscenic)
+export(RunInferCNVAnalysis)
+export(RunInferCNVCluster)
+export(RunInferCNVPipeline)
 export(TCGADegLimma)
 export(TCGAExtractTumor)
 export(TCGAStagePlot)
@@ -41,6 +45,7 @@ import(AUCell)
 import(CellChat)
 import(ClusterGVis)
 import(CoGAPS)
+import(ComplexHeatmap)
 import(DoubletFinder)
 import(IOBR)
 import(Matrix)
@@ -62,6 +67,7 @@ import(ggpubr)
 import(ggsignif)
 import(grid)
 import(hdWGCNA)
+import(infercnv)
 import(ktplots)
 import(limma)
 import(mistyR)
