--- a/NAMESPACE
+++ b/NAMESPACE
@@ -12,7 +12,6 @@ export(PreparePyscenic)
 export(ProcessPyscenic)
 export(RunInferCNVAnalysis)
 export(RunInferCNVCluster)
-export(RunInferCNVPipeline)
 export(TCGADegLimma)
 export(TCGAExtractTumor)
 export(TCGAStagePlot)
@@ -31,6 +30,7 @@ export(runCogapsAnalysis)
 export(runCytoTRACEAnalysis)
 export(runHdWGCNAStep1)
 export(runHdWGCNAStep2)
+export(runInferCNVPipeline)
 export(runMistyRAnalysis)
 export(runMonocleAnalysis)
 export(runScGSEA)
