--- a/NAMESPACE
+++ b/NAMESPACE
@@ -3,7 +3,11 @@
 S3method(ComputeModuleScore,Seurat)
 S3method(ComputeModuleScore,default)
 export(ComputeModuleScore)
+export(EnsemblToGenesymbol)
+export(GenesymbolToEnsembl)
+export(HumanToMouseGenesymbol)
 export(MarkDoubletsWrapper)
+export(MouseToHumanGenesymbol)
 export(PlotViolin)
 export(PrepareCell2loc)
 export(PrepareCpdb)
@@ -18,6 +22,7 @@ export(TCGAStagePlot)
 export(TCGASurvivalPlot)
 export(TCGAUniCox)
 export(TCGA_group)
+export(UniprotToGenesymbol)
 export(VarDecompose)
 export(bioForest)
 export(cpdb_visualization)
@@ -40,6 +45,8 @@ export(run_clustree)
 export(run_normalize)
 export(scVisDimPlot)
 export(scVisFeaturePlot)
+export(scVisFeaturePlot3)
+export(scVisFeaturePlot3.grid)
 export(scVisTissueOR)
 import(AUCell)
 import(CellChat)
