--- a/NAMESPACE
+++ b/NAMESPACE
@@ -16,6 +16,8 @@ export(PreparePyscenic)
 export(ProcessPyscenic)
 export(RunInferCNVAnalysis)
 export(RunInferCNVCluster)
+export(StackedViolin)
+export(StackedViolin_v3)
 export(TCGADegLimma)
 export(TCGAExtractTumor)
 export(TCGAStagePlot)
@@ -24,7 +26,11 @@ export(TCGAUniCox)
 export(TCGA_group)
 export(UniprotToGenesymbol)
 export(VarDecompose)
+export(VlnPlot2.Seurat)
+export(VlnPlot2.default)
 export(bioForest)
+export(color_iwh)
+export(color_pro)
 export(cpdb_visualization)
 export(creat_project)
 export(get_TCGA)
@@ -43,11 +49,15 @@ export(runScMetabolismAnalysis)
 export(runScRNAQC)
 export(run_clustree)
 export(run_normalize)
+export(ryb2rgb)
+export(save_colors)
 export(scVisDimPlot)
 export(scVisFeaturePlot)
 export(scVisFeaturePlot3)
 export(scVisFeaturePlot3.grid)
 export(scVisTissueOR)
+export(scVisVlnPlot.Seurat)
+export(scVisVlnPlot.default)
 import(AUCell)
 import(CellChat)
 import(ClusterGVis)
