--- a/NAMESPACE
+++ b/NAMESPACE
@@ -2,6 +2,7 @@
 
 S3method(ComputeModuleScore,Seurat)
 S3method(ComputeModuleScore,default)
+export(CalcStats)
 export(ComputeModuleScore)
 export(EnsemblToGenesymbol)
 export(GenesymbolToEnsembl)
@@ -26,8 +27,8 @@ export(TCGAUniCox)
 export(TCGA_group)
 export(UniprotToGenesymbol)
 export(VarDecompose)
-export(VlnPlot2.Seurat)
-export(VlnPlot2.default)
+export(VlnPlot2)
+export(WaterfallPlot)
 export(bioForest)
 export(color_iwh)
 export(color_pro)
