--- a/NAMESPACE
+++ b/NAMESPACE
@@ -7,6 +7,7 @@ export(ComputeModuleScore)
 export(EnsemblToGenesymbol)
 export(GenesymbolToEnsembl)
 export(HumanToMouseGenesymbol)
+export(ImportPyscenicLoom)
 export(MarkDoubletsWrapper)
 export(MouseToHumanGenesymbol)
 export(PlotViolin)
@@ -17,6 +18,7 @@ export(PreparePyscenic)
 export(ProcessPyscenic)
 export(RunInferCNVAnalysis)
 export(RunInferCNVCluster)
+export(Seu2Loom)
 export(StackedViolin)
 export(StackedViolin_v3)
 export(TCGADegLimma)
