--- a/NAMESPACE
+++ b/NAMESPACE
@@ -58,6 +58,7 @@ export(scVisDimPlot)
 export(scVisFeaturePlot)
 export(scVisFeaturePlot3)
 export(scVisFeaturePlot3.grid)
+export(scVisHeatmap)
 export(scVisTissueOR)
 export(scVisVlnPlot.Seurat)
 export(scVisVlnPlot.default)
