--- a/NAMESPACE
+++ b/NAMESPACE
@@ -44,6 +44,7 @@ export(runCogapsAnalysis)
 export(runCytoTRACEAnalysis)
 export(runHdWGCNAStep1)
 export(runHdWGCNAStep2)
+export(runHdWGCNAStep3)
 export(runInferCNVPipeline)
 export(runMistyRAnalysis)
 export(runMonocleAnalysis)
@@ -107,6 +108,7 @@ import(survminer)
 import(tidyr)
 import(tidyverse)
 import(vioplot)
+importFrom(ggplot2,scale_color_gradientn)
 importFrom(graphics,arrows)
 importFrom(graphics,axis)
 importFrom(graphics,box)
@@ -115,4 +117,5 @@ importFrom(graphics,points)
 importFrom(graphics,text)
 importFrom(harmony,RunHarmony)
 importFrom(magrittr,"%>%")
+importFrom(qs,qread)
 importFrom(utils,read.table)
