--- a/NAMESPACE
+++ b/NAMESPACE
@@ -15,6 +15,7 @@ export(PrepareCell2loc)
 export(PrepareCpdb)
 export(PrepareDataForInferCNV)
 export(PreparePyscenic)
+export(PrepareScFEA)
 export(ProcessPyscenic)
 export(RunInferCNVAnalysis)
 export(RunInferCNVCluster)
