--- a/NAMESPACE
+++ b/NAMESPACE
@@ -17,6 +17,7 @@ export(PrepareDataForInferCNV)
 export(PreparePyscenic)
 export(PrepareScFEA)
 export(ProcessPyscenic)
+export(ProcessSpatialData)
 export(RunInferCNVAnalysis)
 export(RunInferCNVCluster)
 export(Seu2Loom)
@@ -64,6 +65,7 @@ export(scVisHeatmap)
 export(scVisTissueOR)
 export(scVisVlnPlot.Seurat)
 export(scVisVlnPlot.default)
+export(stvisSpatialDimplot)
 import(AUCell)
 import(CellChat)
 import(ClusterGVis)
@@ -118,5 +120,7 @@ importFrom(graphics,points)
 importFrom(graphics,text)
 importFrom(harmony,RunHarmony)
 importFrom(magrittr,"%>%")
+importFrom(paletteer,paletteer_c)
+importFrom(patchwork,wrap_plots)
 importFrom(qs,qread)
 importFrom(utils,read.table)
