--- a/NAMESPACE
+++ b/NAMESPACE
@@ -41,6 +41,8 @@ export(creat_project)
 export(get_TCGA)
 export(plotMonocleBranchEnrich)
 export(plotMonocleTrajectories)
+export(prepareMIAsc)
+export(prepareMIAst)
 export(runCellChatAnalysis)
 export(runCogapsAnalysis)
 export(runCytoTRACEAnalysis)
@@ -48,6 +50,7 @@ export(runHdWGCNAStep1)
 export(runHdWGCNAStep2)
 export(runHdWGCNAStep3)
 export(runInferCNVPipeline)
+export(runMIA)
 export(runMistyRAnalysis)
 export(runMonocleAnalysis)
 export(runScGSEA)
@@ -78,12 +81,14 @@ import(RColorBrewer)
 import(SCopeLoomR)
 import(Seurat)
 import(arrow)
+import(circlize)
 import(clusterProfiler)
 import(clustree)
 import(data.table)
 import(dplyr)
 import(export)
 import(fgsea)
+import(foreach)
 import(furrr)
 import(future)
 import(ggplot2)
