--- a/NAMESPACE
+++ b/NAMESPACE
@@ -14,6 +14,7 @@ export(PreparePyscenic)
 export(PrepareScFEA)
 export(ProcessPyscenic)
 export(ProcessSpatialData)
+export(RunCopyKAT)
 export(RunInferCNVAnalysis)
 export(RunInferCNVCluster)
 export(Seu2Loom)
@@ -79,6 +80,7 @@ import(arrow)
 import(circlize)
 import(clusterProfiler)
 import(clustree)
+import(copykat)
 import(data.table)
 import(dplyr)
 import(export)
@@ -111,6 +113,7 @@ import(survminer)
 import(tidyr)
 import(tidyverse)
 import(vioplot)
+importFrom(clusterProfiler,enrichGO)
 importFrom(ggplot2,scale_color_gradientn)
 importFrom(graphics,arrows)
 importFrom(graphics,axis)
@@ -120,6 +123,8 @@ importFrom(graphics,points)
 importFrom(graphics,text)
 importFrom(harmony,RunHarmony)
 importFrom(magrittr,"%>%")
+importFrom(org.Hs.eg.db,org.Hs.eg.db)
+importFrom(org.Mm.eg.db,org.Mm.eg.db)
 importFrom(paletteer,paletteer_c)
 importFrom(patchwork,wrap_plots)
 importFrom(qs,qread)
