--- a/NAMESPACE
+++ b/NAMESPACE
@@ -35,6 +35,7 @@ export(color_iwh)
 export(color_pro)
 export(cpdb_visualization)
 export(creat_project)
+export(generate_comparisons)
 export(get_TCGA)
 export(plotMonocleBranchEnrich)
 export(plotMonocleTrajectories)
