--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,39 +1,31 @@
 Package: easySingleCell
-Title: This is an R package to fast the bioinformatics analysis for bulk-seq, scRNA-seq, stRNA-seq
+Title: Accelerate Bioinformatics Analysis for Bulk, scRNA-seq, and stRNA-seq
 Version: 0.0.6
 Authors@R: 
     person("Peng", "Xia", , "xp294053@163.com", role = c("aut", "cre"),
            comment = c(ORCID = "YOUR-ORCID-ID"))
-Description: Fast your bioinformatics analysis for bulk-seq, scRNA-seq, stRNA-seq data based on easySingleCell!
+Description: Streamlines bioinformatics analysis for bulk-seq, scRNA-seq, 
+    and stRNA-seq data. This package provides wrapper functions based on 
+    popular frameworks to simplify common workflows.
 License: MIT + file LICENSE
 Encoding: UTF-8
 Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.3.3
 LazyData: true
 Depends: 
-    R (>= 4.1.1)
-Imports:
-    tidyverse,
-    UCSCXenaTools,
-    IOBR,
-    ggpubr,
-    GSVA,
-    org.Hs.eg.db,
-    scRNAtoolVis,
-    ClusterGVis,
-    qs,
-    ComplexHeatmap,
-    SummarizedExperiment
-biocViews: clusterProfiler,org.Hs.eg.db,SummarizedExperiment
-Collate: 
-    'Creat_Project.R'
-    'Internal.R'
-    'TCGA_panel.R'
-    'Useful_function.R'
-    'color_panel.R'
-    'generics.R'
-    'import.R'
-    'plot_panel.R'
-    'prepare_panel.R'
-    'process_panel.R'
-    'scVisual_panel.R'
+    R (>= 4.2.0)
+Imports: 
+    dplyr,
+    ggplot2,
+    Seurat (>= 4.0.0),
+    magrittr,
+    tibble,
+    patchwork,
+    methods
+Suggests: 
+    knitr,
+    rmarkdown,
+    testthat (>= 3.0.0)
+VignetteBuilder: knitr
+URL: https://github.com/BioinfoXP/easySingleCell
+BugReports: https://github.com/BioinfoXP/easySingleCell/issues
