--- a/NAMESPACE
+++ b/NAMESPACE
@@ -11,6 +11,7 @@ export(run_preprocess)
 export(scVisCellRatioPlot)
 export(scVisDimPlot)
 export(scVisFeaturePlot)
+export(scVisRoePlot)
 importFrom(Biobase,AnnotatedDataFrame)
 importFrom(CytoTRACE,CytoTRACE)
 importFrom(CytoTRACE,plotCytoTRACE)
@@ -44,6 +45,8 @@ importFrom(ggplot2,theme)
 importFrom(ggplot2,theme_bw)
 importFrom(ggplot2,theme_classic)
 importFrom(ggplot2,unit)
+importFrom(grDevices,colorRampPalette)
 importFrom(methods,is)
 importFrom(patchwork,plot_annotation)
 importFrom(patchwork,wrap_plots)
+importFrom(pheatmap,pheatmap)
