--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,6 +4,7 @@ export(Best100)
 export(BulkGseGO)
 export(BulkLimma)
 export(creat_project)
+export(readH5AD)
 export(runCytoTRACEAnalysis)
 export(runDoubletFinderAnalysis)
 export(runMonocleAnalysis)
@@ -12,16 +13,27 @@ export(run_decontX)
 export(run_preprocess)
 export(scVisCellRatioPlot)
 export(scVisDimPlot)
+export(scVisDotPlot)
 export(scVisFeaturePlot)
 export(scVisRoePlot)
+export(writeH5AD)
 import(org.Hs.eg.db)
 importFrom(Biobase,AnnotatedDataFrame)
 importFrom(CytoTRACE,CytoTRACE)
 importFrom(CytoTRACE,plotCytoTRACE)
+importFrom(Matrix,t)
+importFrom(RColorBrewer,brewer.pal)
 importFrom(Seurat,AddMetaData)
+importFrom(Seurat,CreateDimReducObject)
+importFrom(Seurat,CreateSeuratObject)
+importFrom(Seurat,DefaultAssay)
+importFrom(Seurat,DotPlot)
+importFrom(Seurat,Embeddings)
 importFrom(Seurat,FeaturePlot)
 importFrom(Seurat,FetchData)
 importFrom(Seurat,GetAssayData)
+importFrom(Seurat,GetTissueCoordinates)
+importFrom(Seurat,Key)
 importFrom(Seurat,NoLegend)
 importFrom(Seurat,PercentageFeatureSet)
 importFrom(Seurat,VlnPlot)
@@ -38,11 +50,14 @@ importFrom(ggplot2,geom_point)
 importFrom(ggplot2,ggplot)
 importFrom(ggplot2,ggsave)
 importFrom(ggplot2,ggtitle)
+importFrom(ggplot2,guide_colorbar)
 importFrom(ggplot2,guide_legend)
 importFrom(ggplot2,guides)
 importFrom(ggplot2,labs)
+importFrom(ggplot2,margin)
 importFrom(ggplot2,scale_color_gradientn)
 importFrom(ggplot2,scale_color_manual)
+importFrom(ggplot2,scale_size_continuous)
 importFrom(ggplot2,scale_x_continuous)
 importFrom(ggplot2,scale_y_continuous)
 importFrom(ggplot2,theme)
@@ -56,6 +71,7 @@ importFrom(limma,lmFit)
 importFrom(limma,makeContrasts)
 importFrom(limma,modelMatrix)
 importFrom(limma,topTable)
+importFrom(methods,as)
 importFrom(methods,is)
 importFrom(patchwork,plot_annotation)
 importFrom(patchwork,wrap_plots)
