--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,6 +1,6 @@
 Package: easySingleCell
 Title: Accelerate Bioinformatics Analysis for Bulk, scRNA-seq, and stRNA-seq
-Version: 0.0.8
+Version: 0.0.9
 Authors@R: 
     person("Peng", "Xia", , "xp294053@163.com", role = c("aut", "cre"),
            comment = c(ORCID = "YOUR-ORCID-ID"))
@@ -15,13 +15,20 @@ LazyData: true
 Depends: 
     R (>= 4.2.0)
 Imports: 
+    Biobase,
+    clusterProfiler,
+    CytoTRACE,
     dplyr,
     ggplot2 (>= 3.5.0),
-    Seurat (>= 4.0.0),
+    limma,
     magrittr,
-    tibble,
+    Matrix,
+    methods,
+    org.Hs.eg.db,
     patchwork,
-    methods
+    pheatmap,
+    Seurat (>= 4.0.0),
+    tibble
 Suggests: 
     knitr,
     rmarkdown,
