--- a/NAMESPACE
+++ b/NAMESPACE
@@ -3,6 +3,8 @@
 export(Best100)
 export(BulkGseGO)
 export(BulkLimma)
+export(VizBar)
+export(VizBox)
 export(creat_project)
 export(readH5AD)
 export(runCytoTRACEAnalysis)
@@ -38,6 +40,7 @@ importFrom(Seurat,NoLegend)
 importFrom(Seurat,PercentageFeatureSet)
 importFrom(Seurat,VlnPlot)
 importFrom(clusterProfiler,gseGO)
+importFrom(cowplot,theme_cowplot)
 importFrom(ggplot2,aes)
 importFrom(ggplot2,arrow)
 importFrom(ggplot2,element_blank)
@@ -46,6 +49,9 @@ importFrom(ggplot2,element_rect)
 importFrom(ggplot2,element_text)
 importFrom(ggplot2,facet_grid)
 importFrom(ggplot2,facet_wrap)
+importFrom(ggplot2,geom_boxplot)
+importFrom(ggplot2,geom_errorbar)
+importFrom(ggplot2,geom_jitter)
 importFrom(ggplot2,geom_point)
 importFrom(ggplot2,ggplot)
 importFrom(ggplot2,ggsave)
@@ -55,15 +61,20 @@ importFrom(ggplot2,guide_legend)
 importFrom(ggplot2,guides)
 importFrom(ggplot2,labs)
 importFrom(ggplot2,margin)
+importFrom(ggplot2,position_dodge)
 importFrom(ggplot2,scale_color_gradientn)
 importFrom(ggplot2,scale_color_manual)
+importFrom(ggplot2,scale_fill_manual)
 importFrom(ggplot2,scale_size_continuous)
 importFrom(ggplot2,scale_x_continuous)
 importFrom(ggplot2,scale_y_continuous)
+importFrom(ggplot2,stat_summary)
 importFrom(ggplot2,theme)
 importFrom(ggplot2,theme_bw)
 importFrom(ggplot2,theme_classic)
 importFrom(ggplot2,unit)
+importFrom(ggplot2,ylim)
+importFrom(ggsignif,geom_signif)
 importFrom(grDevices,colorRampPalette)
 importFrom(limma,contrasts.fit)
 importFrom(limma,eBayes)
@@ -76,4 +87,8 @@ importFrom(methods,is)
 importFrom(patchwork,plot_annotation)
 importFrom(patchwork,wrap_plots)
 importFrom(pheatmap,pheatmap)
+importFrom(rlang,.data)
+importFrom(stats,aggregate)
+importFrom(stats,sd)
 importFrom(tibble,rownames_to_column)
+importFrom(utils,combn)
