--- a/NAMESPACE
+++ b/NAMESPACE
@@ -5,6 +5,7 @@ export(BulkGseGO)
 export(BulkLimma)
 export(VizBar)
 export(VizBox)
+export(VizGroupedBox)
 export(creat_project)
 export(readH5AD)
 export(runCytoTRACEAnalysis)
@@ -53,6 +54,8 @@ importFrom(ggplot2,geom_boxplot)
 importFrom(ggplot2,geom_errorbar)
 importFrom(ggplot2,geom_jitter)
 importFrom(ggplot2,geom_point)
+importFrom(ggplot2,geom_segment)
+importFrom(ggplot2,geom_text)
 importFrom(ggplot2,ggplot)
 importFrom(ggplot2,ggsave)
 importFrom(ggplot2,ggtitle)
@@ -62,6 +65,7 @@ importFrom(ggplot2,guides)
 importFrom(ggplot2,labs)
 importFrom(ggplot2,margin)
 importFrom(ggplot2,position_dodge)
+importFrom(ggplot2,position_jitterdodge)
 importFrom(ggplot2,scale_color_gradientn)
 importFrom(ggplot2,scale_color_manual)
 importFrom(ggplot2,scale_fill_manual)
@@ -89,6 +93,10 @@ importFrom(patchwork,wrap_plots)
 importFrom(pheatmap,pheatmap)
 importFrom(rlang,.data)
 importFrom(stats,aggregate)
+importFrom(stats,p.adjust)
 importFrom(stats,sd)
+importFrom(stats,symnum)
+importFrom(stats,t.test)
+importFrom(stats,wilcox.test)
 importFrom(tibble,rownames_to_column)
 importFrom(utils,combn)
