--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,6 +4,10 @@ export(AutoCellType)
 export(Best100)
 export(BulkGseGO)
 export(BulkLimma)
+export(DepmapBox)
+export(DepmapMetaSelect)
+export(DepmapPrepare)
+export(DepmapScatter)
 export(VizBar)
 export(VizBox)
 export(VizGroupedBox)
@@ -43,7 +47,11 @@ importFrom(Seurat,PercentageFeatureSet)
 importFrom(Seurat,VlnPlot)
 importFrom(clusterProfiler,gseGO)
 importFrom(cowplot,theme_cowplot)
+importFrom(data.table,fread)
+importFrom(dplyr,distinct)
+importFrom(dplyr,filter)
 importFrom(ggplot2,aes)
+importFrom(ggplot2,annotate)
 importFrom(ggplot2,arrow)
 importFrom(ggplot2,element_blank)
 importFrom(ggplot2,element_line)
@@ -53,9 +61,11 @@ importFrom(ggplot2,facet_grid)
 importFrom(ggplot2,facet_wrap)
 importFrom(ggplot2,geom_boxplot)
 importFrom(ggplot2,geom_errorbar)
+importFrom(ggplot2,geom_hline)
 importFrom(ggplot2,geom_jitter)
 importFrom(ggplot2,geom_point)
 importFrom(ggplot2,geom_segment)
+importFrom(ggplot2,geom_smooth)
 importFrom(ggplot2,geom_text)
 importFrom(ggplot2,ggplot)
 importFrom(ggplot2,ggsave)
@@ -79,8 +89,11 @@ importFrom(ggplot2,theme_bw)
 importFrom(ggplot2,theme_classic)
 importFrom(ggplot2,unit)
 importFrom(ggplot2,ylim)
+importFrom(ggpubr,ggarrange)
 importFrom(ggsignif,geom_signif)
+importFrom(glue,glue)
 importFrom(grDevices,colorRampPalette)
+importFrom(jsonlite,fromJSON)
 importFrom(limma,contrasts.fit)
 importFrom(limma,eBayes)
 importFrom(limma,lmFit)
@@ -89,15 +102,22 @@ importFrom(limma,modelMatrix)
 importFrom(limma,topTable)
 importFrom(methods,as)
 importFrom(methods,is)
+importFrom(openai,OpenAI)
 importFrom(patchwork,plot_annotation)
 importFrom(patchwork,wrap_plots)
 importFrom(pheatmap,pheatmap)
 importFrom(rlang,.data)
+importFrom(rlang,enquo)
+importFrom(rlang,quo_is_null)
 importFrom(stats,aggregate)
+importFrom(stats,complete.cases)
+importFrom(stats,cor.test)
 importFrom(stats,p.adjust)
 importFrom(stats,sd)
 importFrom(stats,symnum)
 importFrom(stats,t.test)
 importFrom(stats,wilcox.test)
+importFrom(stringr,str_remove_all)
 importFrom(tibble,rownames_to_column)
+importFrom(tidyr,pivot_longer)
 importFrom(utils,combn)
