--- a/NAMESPACE
+++ b/NAMESPACE
@@ -48,8 +48,10 @@ importFrom(Seurat,VlnPlot)
 importFrom(clusterProfiler,gseGO)
 importFrom(cowplot,theme_cowplot)
 importFrom(data.table,fread)
+importFrom(dplyr,all_of)
 importFrom(dplyr,distinct)
 importFrom(dplyr,filter)
+importFrom(dplyr,select)
 importFrom(ggplot2,aes)
 importFrom(ggplot2,annotate)
 importFrom(ggplot2,arrow)
@@ -118,6 +120,7 @@ importFrom(stats,symnum)
 importFrom(stats,t.test)
 importFrom(stats,wilcox.test)
 importFrom(stringr,str_remove_all)
+importFrom(tibble,column_to_rownames)
 importFrom(tibble,rownames_to_column)
 importFrom(tidyr,pivot_longer)
 importFrom(utils,combn)
