--- a/NAMESPACE
+++ b/NAMESPACE
@@ -8,6 +8,8 @@ export(DepmapBox)
 export(DepmapMetaSelect)
 export(DepmapPrepare)
 export(DepmapScatter)
+export(GEO_Classify_AI)
+export(GEO_Screen_AI)
 export(VizBar)
 export(VizBox)
 export(VizGroupedBox)
@@ -41,6 +43,7 @@ importFrom(Seurat,FeaturePlot)
 importFrom(Seurat,FetchData)
 importFrom(Seurat,GetAssayData)
 importFrom(Seurat,GetTissueCoordinates)
+importFrom(Seurat,Idents)
 importFrom(Seurat,Key)
 importFrom(Seurat,NoLegend)
 importFrom(Seurat,PercentageFeatureSet)
@@ -49,8 +52,12 @@ importFrom(clusterProfiler,gseGO)
 importFrom(cowplot,theme_cowplot)
 importFrom(data.table,fread)
 importFrom(dplyr,all_of)
+importFrom(dplyr,arrange)
+importFrom(dplyr,bind_rows)
+importFrom(dplyr,desc)
 importFrom(dplyr,distinct)
 importFrom(dplyr,filter)
+importFrom(dplyr,mutate)
 importFrom(dplyr,select)
 importFrom(ggplot2,aes)
 importFrom(ggplot2,annotate)
@@ -59,12 +66,12 @@ importFrom(ggplot2,element_blank)
 importFrom(ggplot2,element_line)
 importFrom(ggplot2,element_rect)
 importFrom(ggplot2,element_text)
-importFrom(ggplot2,facet_grid)
 importFrom(ggplot2,facet_wrap)
 importFrom(ggplot2,geom_boxplot)
 importFrom(ggplot2,geom_errorbar)
 importFrom(ggplot2,geom_hline)
 importFrom(ggplot2,geom_jitter)
+importFrom(ggplot2,geom_label)
 importFrom(ggplot2,geom_point)
 importFrom(ggplot2,geom_segment)
 importFrom(ggplot2,geom_smooth)
@@ -92,6 +99,8 @@ importFrom(ggplot2,theme_classic)
 importFrom(ggplot2,unit)
 importFrom(ggplot2,ylim)
 importFrom(ggpubr,ggarrange)
+importFrom(ggrepel,geom_label_repel)
+importFrom(ggrepel,geom_text_repel)
 importFrom(ggsignif,geom_signif)
 importFrom(glue,glue)
 importFrom(grDevices,colorRampPalette)
@@ -111,16 +120,21 @@ importFrom(pheatmap,pheatmap)
 importFrom(rlang,.data)
 importFrom(rlang,enquo)
 importFrom(rlang,quo_is_null)
+importFrom(rlang,sym)
 importFrom(stats,aggregate)
 importFrom(stats,complete.cases)
 importFrom(stats,cor.test)
+importFrom(stats,median)
 importFrom(stats,p.adjust)
 importFrom(stats,sd)
 importFrom(stats,symnum)
 importFrom(stats,t.test)
 importFrom(stats,wilcox.test)
+importFrom(stringr,str_extract)
 importFrom(stringr,str_remove_all)
 importFrom(tibble,column_to_rownames)
 importFrom(tibble,rownames_to_column)
 importFrom(tidyr,pivot_longer)
 importFrom(utils,combn)
+importFrom(utils,setTxtProgressBar)
+importFrom(utils,txtProgressBar)
