--- a/NAMESPACE
+++ b/NAMESPACE
@@ -21,8 +21,10 @@ export(runMonocleAnalysis)
 export(runScRNAQC)
 export(run_decontX)
 export(run_preprocess)
+export(scVisCellFC)
 export(scVisCellRatioPlot)
 export(scVisDimPlot)
+export(scVisDimSplit)
 export(scVisDotPlot)
 export(scVisFeaturePlot)
 export(scVisRoePlot)
@@ -49,6 +51,7 @@ importFrom(Seurat,NoLegend)
 importFrom(Seurat,PercentageFeatureSet)
 importFrom(Seurat,VlnPlot)
 importFrom(clusterProfiler,gseGO)
+importFrom(cowplot,plot_grid)
 importFrom(cowplot,theme_cowplot)
 importFrom(data.table,fread)
 importFrom(dplyr,all_of)
@@ -57,17 +60,26 @@ importFrom(dplyr,bind_rows)
 importFrom(dplyr,desc)
 importFrom(dplyr,distinct)
 importFrom(dplyr,filter)
+importFrom(dplyr,full_join)
+importFrom(dplyr,group_by)
 importFrom(dplyr,mutate)
+importFrom(dplyr,n)
+importFrom(dplyr,rename)
 importFrom(dplyr,select)
+importFrom(dplyr,summarise)
+importFrom(dplyr,ungroup)
 importFrom(ggplot2,aes)
+importFrom(ggplot2,after_stat)
 importFrom(ggplot2,annotate)
 importFrom(ggplot2,arrow)
+importFrom(ggplot2,coord_cartesian)
 importFrom(ggplot2,element_blank)
 importFrom(ggplot2,element_line)
 importFrom(ggplot2,element_rect)
 importFrom(ggplot2,element_text)
 importFrom(ggplot2,facet_wrap)
 importFrom(ggplot2,geom_boxplot)
+importFrom(ggplot2,geom_col)
 importFrom(ggplot2,geom_errorbar)
 importFrom(ggplot2,geom_hline)
 importFrom(ggplot2,geom_jitter)
@@ -92,10 +104,12 @@ importFrom(ggplot2,scale_fill_manual)
 importFrom(ggplot2,scale_size_continuous)
 importFrom(ggplot2,scale_x_continuous)
 importFrom(ggplot2,scale_y_continuous)
+importFrom(ggplot2,stat_density_2d)
 importFrom(ggplot2,stat_summary)
 importFrom(ggplot2,theme)
 importFrom(ggplot2,theme_bw)
 importFrom(ggplot2,theme_classic)
+importFrom(ggplot2,theme_void)
 importFrom(ggplot2,unit)
 importFrom(ggplot2,ylim)
 importFrom(ggpubr,ggarrange)
@@ -121,11 +135,14 @@ importFrom(rlang,.data)
 importFrom(rlang,enquo)
 importFrom(rlang,quo_is_null)
 importFrom(rlang,sym)
+importFrom(scales,comma)
+importFrom(scales,hue_pal)
 importFrom(stats,aggregate)
 importFrom(stats,complete.cases)
 importFrom(stats,cor.test)
 importFrom(stats,median)
 importFrom(stats,p.adjust)
+importFrom(stats,reorder)
 importFrom(stats,sd)
 importFrom(stats,symnum)
 importFrom(stats,t.test)
@@ -134,6 +151,7 @@ importFrom(stringr,str_extract)
 importFrom(stringr,str_remove_all)
 importFrom(tibble,column_to_rownames)
 importFrom(tibble,rownames_to_column)
+importFrom(tidyr,complete)
 importFrom(tidyr,pivot_longer)
 importFrom(utils,combn)
 importFrom(utils,setTxtProgressBar)
