--- a/NAMESPACE
+++ b/NAMESPACE
@@ -22,12 +22,14 @@ export(runScRNAQC)
 export(run_decontX)
 export(run_preprocess)
 export(scVisCellFC)
+export(scVisCellRatio)
 export(scVisCellRatioPlot)
 export(scVisDimPlot)
 export(scVisDimSplit)
 export(scVisDotPlot)
 export(scVisFeaturePlot)
 export(scVisRoePlot)
+export(scVisVlnPlot)
 export(writeH5AD)
 import(org.Hs.eg.db)
 importFrom(Biobase,AnnotatedDataFrame)
@@ -68,6 +70,8 @@ importFrom(dplyr,rename)
 importFrom(dplyr,select)
 importFrom(dplyr,summarise)
 importFrom(dplyr,ungroup)
+importFrom(ggalluvial,geom_flow)
+importFrom(ggalluvial,geom_stratum)
 importFrom(ggplot2,aes)
 importFrom(ggplot2,after_stat)
 importFrom(ggplot2,annotate)
@@ -77,6 +81,7 @@ importFrom(ggplot2,element_blank)
 importFrom(ggplot2,element_line)
 importFrom(ggplot2,element_rect)
 importFrom(ggplot2,element_text)
+importFrom(ggplot2,expansion)
 importFrom(ggplot2,facet_wrap)
 importFrom(ggplot2,geom_boxplot)
 importFrom(ggplot2,geom_col)
@@ -112,7 +117,9 @@ importFrom(ggplot2,theme_classic)
 importFrom(ggplot2,theme_void)
 importFrom(ggplot2,unit)
 importFrom(ggplot2,ylim)
+importFrom(ggpubr,compare_means)
 importFrom(ggpubr,ggarrange)
+importFrom(ggpubr,stat_compare_means)
 importFrom(ggrepel,geom_label_repel)
 importFrom(ggrepel,geom_text_repel)
 importFrom(ggsignif,geom_signif)
@@ -137,7 +144,9 @@ importFrom(rlang,quo_is_null)
 importFrom(rlang,sym)
 importFrom(scales,comma)
 importFrom(scales,hue_pal)
+importFrom(scales,percent)
 importFrom(stats,aggregate)
+importFrom(stats,as.formula)
 importFrom(stats,complete.cases)
 importFrom(stats,cor.test)
 importFrom(stats,median)
