--- a/NAMESPACE
+++ b/NAMESPACE
@@ -23,11 +23,11 @@ export(run_decontX)
 export(run_preprocess)
 export(scVisCellFC)
 export(scVisCellRatio)
-export(scVisCellRatioPlot)
 export(scVisDimPlot)
 export(scVisDimSplit)
 export(scVisDotPlot)
 export(scVisFeaturePlot)
+export(scVisRatioBox)
 export(scVisRoePlot)
 export(scVisVlnPlot)
 export(writeH5AD)
@@ -64,6 +64,7 @@ importFrom(dplyr,distinct)
 importFrom(dplyr,filter)
 importFrom(dplyr,full_join)
 importFrom(dplyr,group_by)
+importFrom(dplyr,left_join)
 importFrom(dplyr,mutate)
 importFrom(dplyr,n)
 importFrom(dplyr,rename)
