scVisVlnPlot增加对V4的支æ

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -70,7 +70,6 @@ importFrom(dplyr,n)
 importFrom(dplyr,rename)
 importFrom(dplyr,select)
 importFrom(dplyr,summarise)
-importFrom(dplyr,summarize)
 importFrom(dplyr,ungroup)
 importFrom(ggalluvial,geom_flow)
 importFrom(ggalluvial,geom_stratum)
@@ -95,6 +94,7 @@ importFrom(ggplot2,geom_point)
 importFrom(ggplot2,geom_segment)
 importFrom(ggplot2,geom_smooth)
 importFrom(ggplot2,geom_text)
+importFrom(ggplot2,geom_violin)
 importFrom(ggplot2,ggplot)
 importFrom(ggplot2,ggsave)
 importFrom(ggplot2,ggtitle)
@@ -148,7 +148,6 @@ importFrom(scales,comma)
 importFrom(scales,hue_pal)
 importFrom(scales,percent)
 importFrom(stats,aggregate)
-importFrom(stats,as.formula)
 importFrom(stats,complete.cases)
 importFrom(stats,cor.test)
 importFrom(stats,median)
