--- a/NAMESPACE
+++ b/NAMESPACE
@@ -36,12 +36,10 @@ importFrom(Biobase,AnnotatedDataFrame)
 importFrom(CytoTRACE,CytoTRACE)
 importFrom(CytoTRACE,plotCytoTRACE)
 importFrom(Matrix,t)
-importFrom(RColorBrewer,brewer.pal)
 importFrom(Seurat,AddMetaData)
 importFrom(Seurat,CreateDimReducObject)
 importFrom(Seurat,CreateSeuratObject)
 importFrom(Seurat,DefaultAssay)
-importFrom(Seurat,DotPlot)
 importFrom(Seurat,Embeddings)
 importFrom(Seurat,FeaturePlot)
 importFrom(Seurat,FetchData)
@@ -83,6 +81,7 @@ importFrom(ggplot2,element_line)
 importFrom(ggplot2,element_rect)
 importFrom(ggplot2,element_text)
 importFrom(ggplot2,expansion)
+importFrom(ggplot2,facet_grid)
 importFrom(ggplot2,facet_wrap)
 importFrom(ggplot2,geom_boxplot)
 importFrom(ggplot2,geom_col)
@@ -98,7 +97,6 @@ importFrom(ggplot2,geom_violin)
 importFrom(ggplot2,ggplot)
 importFrom(ggplot2,ggsave)
 importFrom(ggplot2,ggtitle)
-importFrom(ggplot2,guide_colorbar)
 importFrom(ggplot2,guide_legend)
 importFrom(ggplot2,guides)
 importFrom(ggplot2,labs)
@@ -108,7 +106,7 @@ importFrom(ggplot2,position_jitterdodge)
 importFrom(ggplot2,scale_color_gradientn)
 importFrom(ggplot2,scale_color_manual)
 importFrom(ggplot2,scale_fill_manual)
-importFrom(ggplot2,scale_size_continuous)
+importFrom(ggplot2,scale_size)
 importFrom(ggplot2,scale_x_continuous)
 importFrom(ggplot2,scale_y_continuous)
 importFrom(ggplot2,stat_density_2d)
