--- a/NAMESPACE
+++ b/NAMESPACE
@@ -15,6 +15,7 @@ export(VizBox)
 export(VizGroupedBox)
 export(creat_project)
 export(readH5AD)
+export(runCopyKAT)
 export(runCytoTRACEAnalysis)
 export(runDoubletFinderAnalysis)
 export(runMonocleAnalysis)
