--- a/NAMESPACE
+++ b/NAMESPACE
@@ -13,6 +13,8 @@ export(GEO_Screen_AI)
 export(VizBar)
 export(VizBox)
 export(VizGroupedBox)
+export(convert_id)
+export(convert_sce_id)
 export(creat_project)
 export(readH5AD)
 export(runCopyKAT)
@@ -31,7 +33,6 @@ export(scVisFeaturePlot)
 export(scVisRatioBox)
 export(scVisRoePlot)
 export(scVisVlnPlot)
-export(symbol2ensembl)
 export(writeH5AD)
 import(org.Hs.eg.db)
 importFrom(Biobase,AnnotatedDataFrame)
